--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -54,6 +54,7 @@
 <!ENTITY Ctr_tabwidthinfo2	"Bredden på faneblade styres af TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Værdier under 48px vil for det meste give fejl i grafikken!">
 <!ENTITY Ctr_square_edges	"Squared top corners">
+<!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
 <!ENTITY Ctr_tabinsertion	"Indsæt relaterede faneblad efter aktive faneblad (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Gendan tomme favicon (hvis webstedet ikke levere et)">
 <!ENTITY Ctr_noemptypticon	"Fjern tomme favicon fra fastgjorte faneblade">
@@ -252,7 +253,7 @@
 <!ENTITY Ctr_bookbarfs		"Bogmærkelinje: i fuldskærmstilstand">
 <!ENTITY Ctr_nonavbarbg		"Navigationslinje: fjern baggrundsfarve">
 <!ENTITY Ctr_nonavbarbg1	"Denne tilføjelses yderligere værktøjslinjer og andre værktøjslinjer i toppen påvirkes.">
-<!ENTITY Ctr_nonavbarbg2	"Alle værktøjslinjer i tilføjelsen 'The Fox, Only Better' Slim Chrome påvirkes.">
+<!ENTITY Ctr_nonavbarbg2	"Alle værktøjslinjer i tilføjelsen 'Beyond Australis' Slim Chrome påvirkes.">
 <!ENTITY Ctr_nonavborder	"Bogmærkelinje: tilføj kant for oven på værktøjslinjen">
 <!ENTITY Ctr_nonavtbborder	"Øverste værktøjslinjer: fjern kanten på værktøjsline">
 <!ENTITY Ctr_hidesbclose	"Sidepaneler: skjul luk-knappen på sidepanel">
