--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -54,6 +54,7 @@
 <!ENTITY Ctr_tabwidthinfo2	"Maksimalna a minimalna šyrokosć wótwisujotej wót TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Gódnoty pód 48px zawinuju zwětšego zmólki w pśedstajenju!">
 <!ENTITY Ctr_square_edges	"Kwadratiske górne rožki">
+<!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
 <!ENTITY Ctr_tabinsertion	"Pśiswójźbny rejtark za aktualnym rejtarkom zasunuś (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Prozny faworitowy symbol wótnowiś (jolic sedło njepóbitujo žeden)">
 <!ENTITY Ctr_noemptypticon	"Prozny faworitowy symbol z pśipětego rejtarka">
@@ -252,7 +253,7 @@
 <!ENTITY Ctr_bookbarfs		"W modusu połneje wobrazowki">
 <!ENTITY Ctr_nonavbarbg		"Slězynowu barwu wótpóraś">
 <!ENTITY Ctr_nonavbarbg1	"Wustatkujo se na pśidatne rědki a druge górne rědki.">
-<!ENTITY Ctr_nonavbarbg2	"Nastajenje ma wustatkowanje na wšykne rědki w pśedstajenju Slim dodanka 'The Fox, Only Better'.">
+<!ENTITY Ctr_nonavbarbg2	"Nastajenje ma wustatkowanje na wšykne rědki w pśedstajenju Slim dodanka 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Górny ramik symbolowej rědce pśidaś">
 <!ENTITY Ctr_nonavtbborder	"Górne symbolowe rědki: ramiki symboloweje rědki wótpóraś">
 <!ENTITY Ctr_hidesbclose	"Bócnice: Tłocašk 'Zacyniś' bócnice schowaś">
