--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -54,6 +54,7 @@
 <!ENTITY Ctr_tabwidthinfo2	"Ancho-mínimo y Ancho-máximo están controlados por TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"¡Los valores por debajo de 48px causarán problemas en la mayoría de los casos!">
 <!ENTITY Ctr_square_edges	"Esquinas superiores cuadradas">
+<!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
 <!ENTITY Ctr_tabinsertion	"Insertar pestaña asociada tras la actual (... >> browser.tabs.insertRelatedAfterCurrent)">
 <!ENTITY Ctr_emptyfavicon	"Restaurar favicon vacío (si un sitio no ofrece uno)">
 <!ENTITY Ctr_noemptypticon	"Eliminar favicon vacío en pestañas fijas">
@@ -252,7 +253,7 @@
 <!ENTITY Ctr_bookbarfs		"Barra de marcadores: En modo pantalla completa">
 <!ENTITY Ctr_nonavbarbg		"Barra de navegación: Eliminar color de fondo">
 <!ENTITY Ctr_nonavbarbg1	"Afecta a las barras adicionales de CTR y otras barras de la parte superior.">
-<!ENTITY Ctr_nonavbarbg2	"Afecta a todas las barras con el 'Chrome fino' del complemento 'The Fox, Only Better'.">
+<!ENTITY Ctr_nonavbarbg2	"Afecta a todas las barras con el 'Chrome fino' del complemento 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Añadir borde superior a la barra de marcadores">
 <!ENTITY Ctr_nonavtbborder	"Barras en la parte superior: Eliminar bordes de barra de herramientas">
 <!ENTITY Ctr_hidesbclose	"Barras laterales: Ocultar botón cerrar de la barra lateral">
