--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -54,6 +54,7 @@
 <!ENTITY Ctr_tabwidthinfo2	"La larghezza minima e massima delle schede è definita da TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"I valori inferiori a 48px provocheranno anomalie nella maggior parte dei casi!">
 <!ENTITY Ctr_square_edges	"Angoli superiori spigolosi">
+<!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
 <!ENTITY Ctr_tabinsertion	"Inserisci la scheda relativa dopo la scheda corrente (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Nei siti che non hanno una favicon usa la vecchia favicon vuota">
 <!ENTITY Ctr_noemptypticon	"Rimuovi la favicon vuota dalla scheda bloccata">
@@ -252,7 +253,7 @@
 <!ENTITY Ctr_bookbarfs		"Barra dei segnalibri: in modalità tutto schermo">
 <!ENTITY Ctr_nonavbarbg		"Rimuovi colore di sfondo dalla barra di navigazione">
 <!ENTITY Ctr_nonavbarbg1	"Ha effetto sulle barre di questo componente aggiuntivo e su altre barre in alto.">
-<!ENTITY Ctr_nonavbarbg2	"Vengono influenzate tutte le barre del componente 'The Fox, Only Better' di Slim Chrome.">
+<!ENTITY Ctr_nonavbarbg2	"Vengono influenzate tutte le barre del componente 'Beyond Australis' di Slim Chrome.">
 <!ENTITY Ctr_nonavborder	"Aggiungi bordo superiore alla barra dei segnalibri">
 <!ENTITY Ctr_nonavtbborder	"Rimuovi i bordi alle barre degli strumenti posizionate in alto">
 <!ENTITY Ctr_hidesbclose	"Barre laterali: nascondi il pulsante di chiusura della barra laterale">
