--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -54,6 +54,7 @@
 <!ENTITY Ctr_tabwidthinfo2	"Larguras Mínimas e Máximas são Controladas Pelo TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Valores Abaixo de 48px Causarão Falhas na Maioria dos Casos!">
 <!ENTITY Ctr_square_edges	"Squared top corners">
+<!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
 <!ENTITY Ctr_tabinsertion	"Inserir a Aba Relacionada Depois da Aba Atual (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Restaurar o Favicon Vazio (Se um Site Não Oferecer Um)">
 <!ENTITY Ctr_noemptypticon	"Remover o Favicon Vazio da Aba Fixa">
@@ -252,7 +253,7 @@
 <!ENTITY Ctr_bookbarfs		"Barra de Favoritos: No Modo de Tela Cheia">
 <!ENTITY Ctr_nonavbarbg		"Barra de Navegação: Remover a Cor do Fundo">
 <!ENTITY Ctr_nonavbarbg1	"Estas Barras de Ferramentas Adicionais de Complementos e Outras Barras de Ferramentas Localizadas No Topo são Afetadas.">
-<!ENTITY Ctr_nonavbarbg2	"Todas as Barras de Ferramentas em 'A Raposa, Só Que Melhor' no Slim Chrome dos Complementos, são Afetadas.">
+<!ENTITY Ctr_nonavbarbg2	"Todas as Barras de Ferramentas em 'Beyond Australis' no Slim Chrome dos Complementos, são Afetadas.">
 <!ENTITY Ctr_nonavborder	"Barra de Favoritos: Adicionar Borda no Topo da Barra">
 <!ENTITY Ctr_nonavtbborder	"Barras superiores: Remover Bordas da Barra">
 <!ENTITY Ctr_hidesbclose	"Barras laterais: Ocultar o Botão Fechar da Barra Lateral">
