--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -54,6 +54,7 @@
 <!ENTITY Ctr_tabwidthinfo2	"Sekme genişlikleri TabUtilities tarafından kontrol ediliyor">
 <!ENTITY Ctr_tabwidthinfo3	"48px altındaki değerler bazı hatalara sebep olabilir!">
 <!ENTITY Ctr_square_edges	"Squared top corners">
+<!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
 <!ENTITY Ctr_tabinsertion	"İlgili sekmeyi geçerli sekmeden sonra ekle (about:config tercihi)">
 <!ENTITY Ctr_emptyfavicon	"Boş faviconu yükle (sitenin faviconu yoksa eğer)">
 <!ENTITY Ctr_noemptypticon	"Tutturulmuş sekmelerde boş faviconu kaldır">
@@ -252,7 +253,7 @@
 <!ENTITY Ctr_bookbarfs		"Yerimi araç çubuğu: Tam Ekran modunda">
 <!ENTITY Ctr_nonavbarbg		"Gezinti Araç çubuğu: Arkaplan rengini kaldır">
 <!ENTITY Ctr_nonavbarbg1	"Bu eklentiler, ek araç çubukları ve diğer üst düzey araç çubuklarını etkiler.">
-<!ENTITY Ctr_nonavbarbg2	"Tüm araç çubukları 'Fox, Only Better' eklentileri Slim Chrome etkilenir.">
+<!ENTITY Ctr_nonavbarbg2	"Tüm araç çubukları 'Beyond Australis' eklentileri Slim Chrome etkilenir.">
 <!ENTITY Ctr_nonavborder	"Yerimi araç çubuğu: Araç çubuğuna üst sınır ekle">
 <!ENTITY Ctr_nonavtbborder	"Tepedeki sekmeler: Araç çubuğu sınırları kaldır">
 <!ENTITY Ctr_hidesbclose	"Sidebars: Kenar çubuğu kapatma düğmesini gizle">
