--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -193,6 +193,7 @@
 
 <!ENTITY Ctr_urlbar			"Adresselinje">
 <!ENTITY Ctr_starinurl		"Stjerne-knap">
+<!ENTITY Ctr_starinurlinfo	"Default bookmarks menu button gets hidden">
 <!ENTITY Ctr_feedinurl		"RSS feed-knap">
 <!ENTITY Ctr_hideurelstop	"Skjul knapperne 'Stop &amp; genindlæs'">
 <!ENTITY Ctr_hideurlgo		"Skjul 'gå'-knap">
