--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -54,7 +54,7 @@
 <!ENTITY Ctr_tabwidthinfo2	"Kaartide laiust kontrollib TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Väiksemad väärtused kui 48px põhjustavad enamusel juhtudel vigu!">
 <!ENTITY Ctr_square_edges	"Kandilised ülemised nurgad">
-<!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
+<!ENTITY Ctr_tttitlebar		"Kaardi pealkiri &brandShortName;i tiitliribal">
 <!ENTITY Ctr_tabinsertion	"Pane seotud kaardid praeguse järele (about:config eelistus)">
 <!ENTITY Ctr_emptyfavicon	"Taasta tühi lehe ikoon (kui sait seda ei paku)">
 <!ENTITY Ctr_noemptypticon	"Eemalda püsikaartidelt tühjad lehe ikoonid">
@@ -193,6 +193,7 @@
 
 <!ENTITY Ctr_urlbar			"Aadressiriba">
 <!ENTITY Ctr_starinurl		"Tähe-nupp">
+<!ENTITY Ctr_starinurlinfo	"Default bookmarks menu button gets hidden">
 <!ENTITY Ctr_feedinurl		"RSS voo nupp">
 <!ENTITY Ctr_hideurelstop	"Peida 'peata &amp; laadi uuesti' nupud">
 <!ENTITY Ctr_hideurlgo		"Peida 'mine' nupp">
