--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -193,6 +193,7 @@
 
 <!ENTITY Ctr_urlbar			"Barra degli indirizzi">
 <!ENTITY Ctr_starinurl		"Stella nella barra degli indirizzi">
+<!ENTITY Ctr_starinurlinfo	"Default bookmarks menu button gets hidden">
 <!ENTITY Ctr_feedinurl		"Pulsante dei feed nella barra degli indirizzi">
 <!ENTITY Ctr_hideurelstop	"Nascondi pulsanti Stop e Ricarica nella barra degli indirizzi">
 <!ENTITY Ctr_hideurlgo		"Nascondi il pulsante 'Vai'">
