--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -193,6 +193,7 @@
 
 <!ENTITY Ctr_urlbar			"URL バー">
 <!ENTITY Ctr_starinurl		"URL バーにスターボタンを表示する">
+<!ENTITY Ctr_starinurlinfo	"Default bookmarks menu button gets hidden">
 <!ENTITY Ctr_feedinurl		"URL バーにフィードボタンを表示する">
 <!ENTITY Ctr_hideurelstop	"URL バーの中止&amp;再読み込みボタンを隠す">
 <!ENTITY Ctr_hideurlgo		"Hide 'go' button">
