--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -193,6 +193,7 @@
 
 <!ENTITY Ctr_urlbar			"地址栏">
 <!ENTITY Ctr_starinurl		"五星按钮">
+<!ENTITY Ctr_starinurlinfo	"Default bookmarks menu button gets hidden">
 <!ENTITY Ctr_feedinurl		"RSS源按钮">
 <!ENTITY Ctr_hideurelstop	"隐藏停止和重新载入按钮">
 <!ENTITY Ctr_hideurlgo		"隐藏 “转到” 按钮">
